Fix layout issues with install button (#9672)

--- a/src/amo/components/InstallButtonWrapper/styles.scss
+++ b/src/amo/components/InstallButtonWrapper/styles.scss
@@ -8,8 +8,8 @@
   }
 }
 
-.InstallButtonWrapper-downloadLink {
-  margin-top: 12px;
+.InstallButtonWrapper-download {
+  margin: 12px 0;
 
   a,
   a:link {
